[gd_scene load_steps=2 format=3 uid="uid://level_complete_scene"]

[ext_resource type="Script" path="res://src/ui/level_complete.gd" id="1_complete"]

[node name="LevelComplete" type="CanvasLayer"]
process_mode = 3
layer = 90
script = ExtResource("1_complete")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0, 0.0, 0.0, 0.6)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 0)

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_colors/font_color = Color(1.0, 0.85, 0.0, 1.0)
text = "Level Complete!"
horizontal_alignment = 1

[node name="StarsLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
theme_override_colors/font_color = Color(1.0, 0.9, 0.2, 1.0)
text = " ★  ★  ☆ "
horizontal_alignment = 1

[node name="CoinsLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Coins: 0"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="ButtonRow" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="NextButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/ButtonRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 50)
theme_override_font_sizes/font_size = 20
text = "Next Level"

[node name="ReplayButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/ButtonRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 50)
theme_override_font_sizes/font_size = 20
text = "Replay"

[node name="SelectButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/ButtonRow"]
layout_mode = 2
custom_minimum_size = Vector2(140, 50)
theme_override_font_sizes/font_size = 20
text = "Levels"
